--- a/public/index.html
+++ b/public/index.html
@@ -43,5 +43,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- KLAVIYO SCRIPT  -->
+    <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=XXpRkp"></script>
   </body>
 </html>
