--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
+    <script src="https://kit.fontawesome.com/ec82071513.js" crossorigin="anonymous"></script>
     <!-- KLAVIYO SCRIPT  -->
     <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=XXpRkp"></script>
   </body>
